--- a/select-picture-from-dgv/select-picture-from-dgv.csproj
+++ b/select-picture-from-dgv/select-picture-from-dgv.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\boardgamePack_v2\PNG\Cards\cardBack_blue3.png" />
+    <None Remove="Images\boardgamePack_v2\PNG\Cards\cardBack_green3.png" />
     <None Remove="Images\boardgamePack_v2\PNG\Cards\cardClubs10.png" />
     <None Remove="Images\boardgamePack_v2\PNG\Cards\cardClubs2.png" />
     <None Remove="Images\boardgamePack_v2\PNG\Cards\cardClubs3.png" />
@@ -66,6 +68,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Images\boardgamePack_v2\PNG\Cards\cardBack_blue3.png" />
+    <EmbeddedResource Include="Images\boardgamePack_v2\PNG\Cards\cardBack_green3.png" />
     <EmbeddedResource Include="Images\boardgamePack_v2\PNG\Cards\cardClubs10.png" />
     <EmbeddedResource Include="Images\boardgamePack_v2\PNG\Cards\cardClubs2.png" />
     <EmbeddedResource Include="Images\boardgamePack_v2\PNG\Cards\cardClubs3.png" />
